Changed some of the CSS so that it fits for the width of a 1520 px page. Also changed the home and about info.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,29 @@
-li{
-    display: inline;
+html {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 45px;
+    line-height: 75px;
 
+}
+#wrapper {
+    width: 1520px;
+    margin-left: auto;
+    margin-right: auto;
+}
+footer {
+    text-align: center;
+}
+h1 {
+    font-size: 200%;
+}
+h2 {
+    font-size: 180%;
+}
+h3 {
+    font-size: 160%;
+}
+menu {
+    padding-left: 0px;
+}
+menu li {
+    display: inline;
 }
